# mono-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  claude_desktop_config.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
mono_banking_mcp/: __init__.py  database.py  mono_client.py  server.py  webhook_server.py
tests/: conftest.py  test_mono_banking.py
